--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
 
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
-  <img src="/assets/IMG_2604.jpg" alt="picture of me" id="sidebar-pic">
+  <img src="assets/IMG_2604.jpg" alt="picture of me" id="sidebar-pic">
   <p id="sidebar-name">CHRISTOPHER ZOU</p>
   <div id="site-description">
     <p>{{ site.description }}</p>
