--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -193,12 +193,13 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .sidebar-item {
-    text-align: center;
+    /*text-align: center;*/
     /*padding: 1.5rem;*/
   }
   .sidebar-nav-item {
-    text-align: center;
-    padding-left:  1.5rem;
+    /*text-align: center;*/
+    font-size: 1rem;
+    padding-left:  1rem;
     padding-right: 1.5rem;
   }
 }
@@ -264,23 +265,21 @@ a.sidebar-nav-item:focus {
   width: 50%;
   margin-top: 60px;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 1rem;
   margin-bottom: 10px;
 }
 
 #sidebar-name {
   margin-top: 20px;
   margin-bottom: 10px;
-  text-align: center;
+  padding-left: 1rem;
+  font-size: 1rem;
   color: #ffffff
 }
 
 #site-description {
   display: block;
-  padding-left: .5rem;
-  padding-right: .5rem;
-  text-align: center;
+  padding-left: 1rem;
   margin-top: 0px;
   color: #ffffff
 }
