Update sidebar text

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,7 +39,8 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }} Christopher Zou. Made with Jekyll.
+      &copy; {{ site.time | date: '%Y' }} Christopher Zou. Made with Jekyll and lots of gratitude to
+      all the personal sites that inspired this one. 
     </p>
   </div>
 </div>
