--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,11 @@
 ---
-layout: default
+layout: postdefault
 ---
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+
+  <h2 class="post-date">{{ page.date | date_to_string }}</h2>
   {{ content }}
 </div>
 
