--- a/_layouts/postdefault.html
+++ b/_layouts/postdefault.html
@@ -2,8 +2,6 @@
 <html lang="en-us">
 
   {% include head.html %}
-  <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_CHTML"></script>
 
   <body>
 
@@ -14,8 +12,8 @@
     <div class="wrap">
       <div class="masthead">
         <div class="container">
-          <h3 class="masthead-title">
-            <p title="home" style="margin-bottom: 0; display: inline;">{{ page.title }}</p>
+          <h3 class="masthead-title" style="padding-bottom: 1.5rem;">
+            <!--<p title="home" style="margin-bottom: 0; display: inline;"></p>-->
             <!--<a href="{{ site.baseurl }}/" title="home">{{ page.title }}</a>-->
             <!--<small style="display: inline;"><a href="{{ site.baseurl }}" title="home">home</a></small>-->
           </h3>
