--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,7 @@
     });
   </script>
   <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
   {% if site.google_analytics_id %}
   <script>
