--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
 
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">home</a>
+    <a class="fancy-underline-sidebar sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">home</a>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
@@ -23,7 +23,7 @@
     {% for node in pages_list %}
       {% if node.title != null %}
         {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url | absolute_url }}">{{ node.title }}</a>
+          <a class="fancy-underline-sidebar sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url | absolute_url }}">{{ node.title }}</a>
         {% endif %}
       {% endif %}
     {% endfor %}
@@ -34,13 +34,13 @@
       Deprecated site version tag.
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     -->
-    <a class="sidebar-nav-item" href="{{ '/' | absolute_url}}/#get-in-touch">contact</a>
+    <a class="fancy-underline-sidebar sidebar-nav-item" href="{{ '/' | absolute_url}}/#get-in-touch">contact</a>
   </nav>
 
   <div class="sidebar-item">
     <p>
       &copy; {{ site.time | date: '%Y' }} Christopher Zou. Made with Jekyll and lots of gratitude to
-      all the personal sites that inspired this one. 
+      all the personal sites that inspired this one.
     </p>
   </div>
 </div>
