--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -42,11 +42,13 @@ body {
 }
 
 html {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: "Source Serif Pro", Georgia, "Times New Roman", serif;
+  font-weight: 400;
+  color: #313131;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-weight: 400;
   color: #313131;
   letter-spacing: -.025rem;
