--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -42,7 +42,7 @@ body {
 }
 
 html {
-  font-family: "Source Serif Pro", Georgia, "Times New Roman", serif;
+  font-family: "Roboto", Georgia, "Times New Roman", serif;
   font-weight: 400;
   color: #313131;
 }
@@ -50,7 +50,7 @@ html {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-weight: 400;
-  color: #313131;
+  color: #333;
   letter-spacing: -.025rem;
 }
 
