Add in Google Summer of Code 2020 blog post

--- a/_layouts/postdefault.html
+++ b/_layouts/postdefault.html
@@ -12,8 +12,8 @@
     <div class="wrap">
       <div class="masthead">
         <div class="container">
-          <h3 class="masthead-title" style="padding-bottom: 1.5rem;">
-            <!--<p title="home" style="margin-bottom: 0; display: inline;"></p>-->
+          <h3 class="masthead-title" style="/*padding-bottom: 1.5rem;*/">
+            <p title="home" style="margin-bottom: 0; display: inline;">blog / </p>
             <!--<a href="{{ site.baseurl }}/" title="home">{{ page.title }}</a>-->
             <!--<small style="display: inline;"><a href="{{ site.baseurl }}" title="home">home</a></small>-->
           </h3>
