--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,9 +16,9 @@
   <link rel="canonical" href="{{ page.url | absolute_url }}">
   {% endif %}
 
-  <link rel="stylesheet" href="{{ '/blog/public/css/poole.css' | absolute_url }}">
-  <link rel="stylesheet" href="{{ '/blog/public/css/syntax.css' | absolute_url }}">
-  <link rel="stylesheet" href="{{ '/blog/public/css/lanyon.css' | absolute_url }}">
+  <link rel="stylesheet" href="{{ '/public/css/poole.css' | absolute_url }}">
+  <link rel="stylesheet" href="{{ '/public/css/syntax.css' | absolute_url }}">
+  <link rel="stylesheet" href="{{ '/public/css/lanyon.css' | absolute_url }}">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&family=Roboto:wght@300;400&family=Source+Serif+Pro:wght@300;400&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
